--- a/Academic Tracker/Login.html
+++ b/Academic Tracker/Login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Academic Tracker - Register</title>
+    <title>Academic Tracker - Login</title>
     <style>
         body {
             font-family: "Lato", sans-serif;
@@ -15,7 +15,7 @@
             min-height: 100vh;
             margin: 0;
         }
-        .register-container {
+        .login-container {
             background: #fff;
             padding: 30px;
             border-radius: 15px;
@@ -36,7 +36,7 @@
             color: #555;
             text-align: left;
         }
-        input[type="text"], input[type="password"], input[type="email"] {
+        input[type="text"], input[type="password"] {
             width: calc(100% - 22px);
             padding: 10px;
             font-size: 16px;
@@ -55,60 +55,45 @@
         button:hover {
             background: #1e4f29;
         }
-        .login-link {
+        .register-link {
             margin-top: 15px;
             font-size: 14px;
             color: #555;
         }
-        .login-link a {
+        .register-link a {
             color: #276436;
             text-decoration: none;
         }
-        .login-link a:hover {
+        .register-link a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="register-container">
-        <h1>Register</h1>
-        <form id="registerForm">
+    <div class="login-container">
+        <h1>Academic Tracker</h1>
+        <form id="loginForm">
             <div class="form-group">
-                <label for="newUsername">Username:</label>
-                <input type="text" id="newUsername" name="newUsername" required>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
-                <label for="newEmail">Email:</label>
-                <input type="email" id="newEmail" name="newEmail" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
             </div>
-            <div class="form-group">
-                <label for="newPassword">Password:</label>
-                <input type="password" id="newPassword" name="newPassword" required>
-            </div>
-            <div class="form-group">
-                <label for="confirmPassword">Confirm Password:</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" required>
-            </div>
-            <button type="submit">Register</button>
+            <button type="submit">Login</button>
         </form>
-        <div class="login-link">
-            Already have an account? <a href="Login.html">Login here</a>
+        <div class="register-link">
+            Don't have an account? <a href="register.html">Register here</a>
         </div>
     </div>
 
     <script>
-        document.getElementById('registerForm').addEventListener('submit', function(event) {
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            const newPassword = document.getElementById('newPassword').value;
-            const confirmPassword = document.getElementById('confirmPassword').value;
-            if (newPassword !== confirmPassword) {
-                alert("Passwords do not match!");
-                return;
-            }
-            // In a real application, you would send this data to a server to create a new user.
-            // For this example, we'll just redirect to the login page.
-            alert("Registration successful! Redirecting to login page.");
-            window.location.href = 'Login.html';
+            // In a real application, you would send this data to a server for authentication.
+            // For this example, we'll just redirect to the calendar page.
+            window.location.href = 'calendar.html';
         });
     </script>
 </body>
