--- a/Academic Tracker/Reminders.html
+++ b/Academic Tracker/Reminders.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic Tracker - Reminders & Notes</title>
     <style>
+        /* Base styles */
         body {
             margin: 0;
             font-family: "Lato", sans-serif;
@@ -14,19 +16,20 @@
 
         .container {
             max-width: 800px;
-            margin: 40px auto;
+            margin: 20px auto; /* Adjusted margin */
             background: #fff;
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
         }
 
+        /* --- Updated Navigation CSS --- */
         .nav-tabs {
-            display: flex;
-            margin-bottom: 20px;
+            display: flex; /* Use flexbox for alignment */
+            align-items: center; /* Vertically align items */
+            margin-bottom: 30px; /* Increased margin */
             border-bottom: 2px solid #ccc;
         }
-
         .nav-tab {
             padding: 10px 15px;
             cursor: pointer;
@@ -34,26 +37,51 @@
             background: none;
             font-size: 16px;
             color: #555;
+            text-decoration: none;
+            display: inline-block;
+            border-bottom: 2px solid transparent; /* Reserve space */
+            margin-bottom: -2px; /* Align with container border */
         }
-
         .nav-tab.active {
             color: #276436;
             border-bottom: 2px solid #276436;
+            font-weight: bold;
         }
-
-        .nav-tab:hover {
+        .nav-tab:hover:not(.active):not(.logout-tab) { /* Don't underline active/logout on hover */
             color: #276436;
+            border-bottom: 2px solid #ccc; /* Subtle hover indication */
         }
 
-        h1 {
+        /* Logout Tab Specific Styles */
+        .logout-tab {
+            margin-left: auto; /* Pushes the logout tab to the right */
+            color: #d32f2f; /* Red color for logout */
+            font-weight: bold;
+            border-radius: 5px;
+            padding: 8px 12px; /* Slightly different padding */
+            border: 1px solid transparent; /* Placeholder for hover */
+        }
+        .logout-tab:hover {
+            background-color: #ffebee; /* Light red background on hover */
+            color: #c62828;
+            border-color: #ef9a9a;
+            text-decoration: none; /* Remove underline */
+            border-bottom: 2px solid transparent; /* Override general hover */
+        }
+        /* --- End of Updated Navigation CSS --- */
+
+
+        h1, h2 { /* Added h2 styling */
             text-align: center;
             color: #276436;
+            margin-bottom: 20px; /* Added margin */
         }
 
         .section {
             margin-bottom: 40px;
         }
 
+        /* Form Elements Styling */
         input[type="text"], textarea {
             width: 100%;
             padding: 10px;
@@ -61,21 +89,26 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             margin-bottom: 10px;
+            box-sizing: border-box; /* Include padding in width */
         }
 
-        button {
+        /* Button Styling */
+        button:not(.delete-btn) { /* Exclude delete button from this style */
             background: #276436;
             color: white;
             padding: 10px 20px;
             border: none;
             border-radius: 8px;
             cursor: pointer;
+            font-size: 16px; /* Added font size */
+            transition: background-color 0.2s ease; /* Added transition */
         }
 
-        button:hover {
+        button:not(.delete-btn):hover {
             background: #1e4f29;
         }
 
+        /* List Styling */
         ul {
             list-style: none;
             padding: 0;
@@ -84,35 +117,72 @@
         ul li {
             background: #f1f9f3;
             margin: 8px 0;
-            padding: 10px;
+            padding: 10px 15px; /* Adjusted padding */
             border-radius: 6px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            border-left: 4px solid #4CAF50; /* Added accent border */
         }
 
+        /* Notes Area Styling */
         .notes {
             background: #fdfdfd;
             padding: 15px;
             border-radius: 8px;
             white-space: pre-wrap;
+            border: 1px solid #eee; /* Added subtle border */
+            min-height: 50px; /* Give it some initial height */
+            margin-top: 10px; /* Space after save button */
         }
 
+        /* Delete Button Styling */
         .delete-btn {
             background: transparent;
-            color: red;
+            color: #f44336; /* Changed color slightly */
             border: none;
             font-weight: bold;
             cursor: pointer;
+            padding: 5px; /* Added padding for easier clicking */
+            margin-left: 10px; /* Space from task text */
+            font-size: 1.1em; /* Slightly larger */
+            line-height: 1; /* Prevent extra space */
         }
+         .delete-btn:hover {
+             color: #d32f2f;
+         }
+
+         /* Responsive Adjustments */
+         @media (max-width: 768px) {
+            .container {
+                 max-width: 95%;
+                 padding: 20px; /* Adjusted padding */
+            }
+            .nav-tabs {
+                 font-size: 14px;
+            }
+            .nav-tab { padding: 8px 10px; }
+            .logout-tab { padding: 6px 10px; }
+            h1, h2 { font-size: 1.5em; }
+            input[type="text"], textarea, button:not(.delete-btn) {
+                font-size: 14px;
+            }
+            ul li { padding: 8px 12px; }
+         }
+         @media (max-width: 480px) {
+            .nav-tab { font-size: 12px; padding: 6px 8px; }
+            .logout-tab { font-size: 12px; padding: 5px 8px; }
+         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="nav-tabs">
-            <button class="nav-tab" onclick="window.location.href='calendar.html'">Calendar</button>
-            <button class="nav-tab active" onclick="window.location.href='reminders.html'">Reminders</button>
-            <button class="nav-tab" onclick="window.location.href='progress.html'">Progress Tracker</button>
+            <a href="calendar.html" class="nav-tab">Calendar</a>
+            <a href="reminders.html" class="nav-tab active">Reminders</a> <a href="progress.html" class="nav-tab">Progress Tracker</a>
+            <a href="grades.html" class="nav-tab">Grades</a>
+            <a href="account.html" class="nav-tab">Account</a>
+            <a href="Login.html" class="nav-tab logout-tab">Logout</a>
         </div>
         <h1>Reminders & Notes</h1>
 
@@ -120,35 +190,116 @@
             <h2>📝 To-Do List</h2>
             <input type="text" id="taskInput" placeholder="Enter a task..." />
             <button onclick="addTask()">Add Task</button>
-            <ul id="taskList"></ul>
+            <ul id="taskList">
+                <li>You can delete this <button class="delete-btn" onclick="this.parentElement.remove()">✖</button></li>
+            </ul>
         </div>
 
         <div class="section">
             <h2>🗒️ Notes</h2>
             <textarea id="noteInput" rows="5" placeholder="Write your notes here..."></textarea>
             <button onclick="saveNote()">Save Note</button>
-            <div class="notes" id="savedNote"></div>
+            <div class="notes" id="savedNote">
+                Remember to check library hours for next week.
+            </div>
         </div>
     </div>
 
     <script>
+        // --- To-Do List ---
+        const taskInput = document.getElementById("taskInput");
+        const taskList = document.getElementById("taskList");
+
         function addTask() {
-            const taskInput = document.getElementById("taskInput");
             const taskText = taskInput.value.trim();
             if (taskText !== "") {
                 const li = document.createElement("li");
-                li.innerHTML = `${taskText} <button class="delete-btn" onclick="this.parentElement.remove()">✖</button>`;
-                document.getElementById("taskList").appendChild(li);
-                taskInput.value = "";
+                // Use textContent for security against HTML injection
+                const textNode = document.createTextNode(taskText + ' ');
+                li.appendChild(textNode);
+
+                // Create delete button
+                const deleteBtn = document.createElement("button");
+                deleteBtn.className = "delete-btn";
+                deleteBtn.innerHTML = "✖"; // Use innerHTML for the symbol
+                deleteBtn.onclick = function() {
+                    this.parentElement.remove();
+                    // Optional: Save updated list to localStorage
+                    saveTasksToLocalStorage();
+                };
+                li.appendChild(deleteBtn);
+
+                taskList.appendChild(li);
+                taskInput.value = ""; // Clear input
+                // Optional: Save updated list to localStorage
+                saveTasksToLocalStorage();
+            } else {
+                alert("Please enter a task.");
             }
         }
 
+        // --- Notes ---
+        const noteInput = document.getElementById("noteInput");
+        const savedNote = document.getElementById("savedNote");
+
         function saveNote() {
-            const noteInput = document.getElementById("noteInput");
-            const savedNote = document.getElementById("savedNote");
-            savedNote.textContent = noteInput.value.trim();
-            noteInput.value = "";
+            const noteText = noteInput.value.trim(); // Trim whitespace
+            savedNote.textContent = noteText; // Display the note
+            // Optional: Save note to localStorage
+            localStorage.setItem('academicTrackerNote', noteText);
+            // Don't clear the textarea after saving, allow editing
+            // noteInput.value = "";
+            alert("Note saved!"); // Provide feedback
         }
+
+        // --- Load data from localStorage on page load ---
+        document.addEventListener('DOMContentLoaded', () => {
+            // Load saved note
+            const savedNoteText = localStorage.getItem('academicTrackerNote');
+            if (savedNoteText) {
+                savedNote.textContent = savedNoteText;
+                noteInput.value = savedNoteText; // Populate textarea for editing
+            }
+
+            // Load saved tasks
+            loadTasksFromLocalStorage();
+        });
+
+        // --- LocalStorage Functions for Tasks (Example) ---
+        function saveTasksToLocalStorage() {
+            const tasks = [];
+            taskList.querySelectorAll('li').forEach(li => {
+                // Extract text content excluding the button text
+                 tasks.push(li.firstChild.textContent.trim());
+            });
+            localStorage.setItem('academicTrackerTasks', JSON.stringify(tasks));
+        }
+
+        function loadTasksFromLocalStorage() {
+            const savedTasks = localStorage.getItem('academicTrackerTasks');
+            if (savedTasks) {
+                const tasks = JSON.parse(savedTasks);
+                taskList.innerHTML = ''; // Clear any default tasks
+                tasks.forEach(taskText => {
+                     if (taskText) { // Ensure task isn't empty
+                         const li = document.createElement("li");
+                         const textNode = document.createTextNode(taskText + ' ');
+                         li.appendChild(textNode);
+
+                         const deleteBtn = document.createElement("button");
+                         deleteBtn.className = "delete-btn";
+                         deleteBtn.innerHTML = "✖";
+                         deleteBtn.onclick = function() {
+                             this.parentElement.remove();
+                             saveTasksToLocalStorage(); // Update storage on delete
+                         };
+                         li.appendChild(deleteBtn);
+                         taskList.appendChild(li);
+                     }
+                });
+            }
+        }
+
     </script>
 </body>
 </html>
